testsuite/poke.pkl/sub-f64-diag-1.pk
/* { dg-do compile } */

var res
  = (2 as uint<15>) .- 1L; /* { dg-error "invalid operand .*" } */
